tests/return/return.exp
Error ------------------------------------------------------------------------------------------ function_return.js:7:16

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined. [incompatible-return]

   7| function f(x): number {
                     ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------ function_return.js:23:3

Cannot return undefined because undefined [1] is incompatible with number [2]. [incompatible-return]

   function_return.js:23:3
   23|   return;
         ^^^^^^^ [1]

References:
   function_return.js:19:16
   19| function h(x): number {
                      ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- implicit.js:6:22

Cannot expect number as the return type of async function because number [1] is incompatible with implicitly-returned
`Promise`. [incompatible-return]

   6| async function g1(): number {}
                           ^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------- implicit.js:7:30

Cannot expect `Promise` as the return type of async function because number [1] is incompatible with implicitly-returned
undefined in type argument `R` [2]. [incompatible-return]

   implicit.js:7:30
     7| async function g2(): Promise<number> {}
                                     ^^^^^^ [1]

References:
   <BUILTINS>/core.js:667:24
   667| declare class Promise<+R> {
                               ^ [2]


Error ----------------------------------------------------------------------------------------------------- void.js:12:2

Cannot cast `f(...)` to undefined because string [1] is incompatible with undefined [2]. [incompatible-cast]

   void.js:12:2
   12| (f(true): void); // error: string ~> void
        ^^^^^^^

References:
   void.js:8:12
    8|     return "nope";
                  ^^^^^^ [1]
   void.js:12:11
   12| (f(true): void); // error: string ~> void
                 ^^^^ [2]



Found 5 errors
